# targets

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  engine.cpp  engine.h  game.cpp  game.h  gameobject.h  run.sh  targets.cpp
assets/bases/: ship.xcf
engine/: engine.cpp  engine.h  gameobject.cpp  gameobject.h  input.cpp  input.h  resources.h
